# OC_P10

./: README.md  db.sqlite3  pyproject.toml  requirements.freeze  requirements.txt  snippets_models.user.py
SoftDesk/: settings.py  urls.py
authentication/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_age.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_alter_user_birthdate_alter_user_can_be_contacted_and_more.py  0003_rename_age_user_birthdate.py  0004_alter_user_birthdate_alter_user_groups_and_more.py  0004_alter_user_email.py  0005_alter_user_first_name_alter_user_last_name.py  0006_alter_user_birthdate.py  0007_alter_user_email_alter_user_first_name_and_more.py  0008_alter_user_birthdate_alter_user_email_and_more.py  0009_alter_user_first_name_alter_user_last_name.py
flake8_report/: index.html
project/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_alter_project_author_alter_project_contributors.py  0003_project_is_active.py  0004_issue.py  0005_remove_issue_issue_type_issue_category_and_more.py  0006_project_slug_name_alter_project_author_and_more.py  0007_issue_slug_name_alter_issue_assigned_to_and_more.py  0008_alter_issue_assigned_to.py  0009_alter_issue_assigned_to_alter_issue_description_and_more.py  0010_comment.py  0011_remove_issue_slug_name.py  0012_alter_comment_description.py
static/css/: css.md
